# django-firebase_auth

./: .gitignore  manage.py  pyproject.toml  requirements.txt  webpack-stats.json  webpack.config.js
fb_phoneauth/: babel.config.js  package-lock.json  package.json  webpack-stats.json  webpack.config.js
fb_phoneauth/static/fb_phoneauth/: main.js  mdl.css  mdl.js
fb_phoneauth/static_src/css/: style.scss
fb_phoneauth/static_src/js/: main.js  mdl.js
sandbox/: settings.py  urls.py
user/: models.py
user/migrations/: 0001_initial.py
