[tool.poetry]
name = "django-firebase_auth"
version = "0.1.0"
description = "Google Firebase authentication for django applications."
authors = ["prajeeshag <prajeeshag@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.9"
django-phonenumber-field = "^6.0.0"
phonenumbers = "^8.12.38"
firebase-admin = "^5.1.0"

[tool.poetry.dev-dependencies]
selenium = "^4.1.0"
django-dotenv = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
